Update to snake case

--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 4,
    "id": "2e02ffa5-b717-4f2f-8a91-ea4452eea52b",
    "metadata": {
     "scrolled": true,
@@ -34,17 +34,17 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 93.0.4577\n",
-      "Get LATEST driver version for 93.0.4577\n",
-      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/93.0.4577.63/chromedriver] found in cache\n"
+      "Current google-chrome version is 94.0.4606\n",
+      "Get LATEST driver version for 94.0.4606\n",
+      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/94.0.4606.41/chromedriver] found in cache\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "NASA's Ingenuity Helicopter Captures a Mars Rock Feature in 3D\n",
-      "The rotorcraft captures nuances of rocky outcrop during aerial reconnaissance.\n"
+      "NASA's Perseverance Rover Cameras Capture Mars Like Never Before\n",
+      "Scientists tap into an array of imagers aboard the six-wheeled explorer to get a big picture of the Red Planet.\n"
      ]
     }
    ],
@@ -52,17 +52,19 @@
     "from splinter import Browser \n",
     "from bs4 import BeautifulSoup\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
+    "import time\n",
     "\n",
     "def init_browser():\n",
     "    # @NOTE: Replace the path with your actual path to the chromedriver\n",
     "    executable_path = { \"executable_path\": ChromeDriverManager().install()}\n",
     "    return Browser(\"chrome\", **executable_path, headless=False)\n",
     "\n",
-    "def scrapeNasaMarsNews():\n",
+    "def scrape_nasa_mars_news():\n",
     "    url = 'https://mars.nasa.gov/news/'\n",
     "\n",
     "    browser = init_browser()\n",
     "    browser.visit(url)\n",
+    "    time.sleep(1)\n",
     "    html = browser.html\n",
     "    browser.quit()\n",
     "    \n",
@@ -78,7 +80,7 @@
     "    return link.text.strip(), teaser.text.strip()\n",
     "    \n",
     "\n",
-    "news_tuple = scrapeNasaMarsNews()\n",
+    "news_tuple = scrape_nasa_mars_news()\n",
     "# print(news_tuple)\n",
     "news_title, news_p = news_tuple\n",
     "print(news_title)\n",
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 5,
    "id": "ffeb7eeb-b81f-4506-9a40-28d0dfd287c1",
    "metadata": {
     "scrolled": true,
@@ -111,23 +113,23 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 93.0.4577\n",
-      "Get LATEST driver version for 93.0.4577\n",
-      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/93.0.4577.63/chromedriver] found in cache\n"
+      "Current google-chrome version is 94.0.4606\n",
+      "Get LATEST driver version for 94.0.4606\n",
+      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/94.0.4606.41/chromedriver] found in cache\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars2.jpg\n"
+      "https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars1.jpg\n"
      ]
     }
    ],
    "source": [
     "from urllib.parse import urljoin\n",
     "\n",
-    "def scrapeJPLFeaturedImage():\n",
+    "def scrape_jpl_featured_image():\n",
     "    browser = init_browser()\n",
     "\n",
     "    url = 'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/index.html'\n",
@@ -146,7 +148,7 @@
     "    #https://stackoverflow.com/questions/35616434/how-can-i-get-the-base-of-a-url-in-python\n",
     "    return urljoin(url, '.') + link['href']    \n",
     "\n",
-    "featured_image_url = scrapeJPLFeaturedImage()\n",
+    "featured_image_url = scrape_jpl_featured_image()\n",
     "print(featured_image_url)\n"
    ]
   },
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 6,
    "id": "30442033-5c6d-4f66-ac5a-5a9a6d9a04e6",
    "metadata": {
     "scrolled": true,
@@ -236,15 +238,15 @@
     "import pandas as pd\n",
     "import requests\n",
     "\n",
-    "def scrapeMarsSpaceFacts():\n",
+    "def scrape_mars_space_facts():\n",
     "\n",
     "    url = 'https://space-facts.com/mars/'\n",
     "    tables = pd.read_html(requests.get(url).text)\n",
     "    df = tables[2]\n",
     "    return df.to_html()\n",
     "\n",
-    "marsSpaceFactsHTML = scrapeMarsSpaceFacts()\n",
-    "print(marsSpaceFactsHTML)\n"
+    "mars_space_facts_HTML = scrape_mars_space_facts()\n",
+    "print(mars_space_facts_HTML)\n"
    ]
   },
   {
@@ -259,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "id": "7da318d7-cfa4-4ac0-8336-0295ae896d41",
    "metadata": {
     "scrolled": true,
@@ -273,9 +275,9 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 93.0.4577\n",
-      "Get LATEST driver version for 93.0.4577\n",
-      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/93.0.4577.63/chromedriver] found in cache\n"
+      "Current google-chrome version is 94.0.4606\n",
+      "Get LATEST driver version for 94.0.4606\n",
+      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/94.0.4606.41/chromedriver] found in cache\n"
      ]
     },
     {
@@ -291,7 +293,7 @@
     "\n",
     "url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
     "\n",
-    "def scrapeMarsHemispheres():\n",
+    "def scrape_mars_hemispheres():\n",
     "    hemisphereList = []\n",
     "    url = 'https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
     "\n",
@@ -340,8 +342,8 @@
     "#     return html\n",
     "#     soup = BeautifulSoup(html, \"html.parser\")\n",
     "\n",
-    "hemisphereList = scrapeMarsHemispheres()\n",
-    "print(hemisphereList)\n"
+    "hemisphere_list = scrape_mars_hemispheres()\n",
+    "print(hemisphere_list)\n"
    ]
   },
   {
@@ -356,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 10,
    "id": "68c650dc-7e68-4d3c-bbd3-c18ec797c5b2",
    "metadata": {},
    "outputs": [
@@ -367,54 +369,54 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 93.0.4577\n",
-      "Get LATEST driver version for 93.0.4577\n",
-      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/93.0.4577.63/chromedriver] found in cache\n",
+      "Current google-chrome version is 94.0.4606\n",
+      "Get LATEST driver version for 94.0.4606\n",
+      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/94.0.4606.41/chromedriver] found in cache\n",
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 93.0.4577\n",
-      "Get LATEST driver version for 93.0.4577\n",
-      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/93.0.4577.63/chromedriver] found in cache\n",
+      "Current google-chrome version is 94.0.4606\n",
+      "Get LATEST driver version for 94.0.4606\n",
+      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/94.0.4606.41/chromedriver] found in cache\n",
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 93.0.4577\n",
-      "Get LATEST driver version for 93.0.4577\n",
-      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/93.0.4577.63/chromedriver] found in cache\n"
+      "Current google-chrome version is 94.0.4606\n",
+      "Get LATEST driver version for 94.0.4606\n",
+      "Driver [/Users/jagjeetkhalsa/.wdm/drivers/chromedriver/mac64/94.0.4606.41/chromedriver] found in cache\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'news_title': \"NASA's Ingenuity Helicopter Captures a Mars Rock Feature in 3D\", 'news_p': 'The rotorcraft captures nuances of rocky outcrop during aerial reconnaissance.', 'featured_image_url': 'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars1.jpg', 'space_facts_HTML': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>', 'hemispheres': [{'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]}\n"
+      "{'news_title': \"NASA's Perseverance Rover Cameras Capture Mars Like Never Before\", 'news_p': 'Scientists tap into an array of imagers aboard the six-wheeled explorer to get a big picture of the Red Planet.', 'featured_image_url': 'https://data-class-jpl-space.s3.amazonaws.com/JPL_Space/image/featured/mars2.jpg', 'space_facts_HTML': '<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>0</th>\\n      <th>1</th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>0</th>\\n      <td>Equatorial Diameter:</td>\\n      <td>6,792 km</td>\\n    </tr>\\n    <tr>\\n      <th>1</th>\\n      <td>Polar Diameter:</td>\\n      <td>6,752 km</td>\\n    </tr>\\n    <tr>\\n      <th>2</th>\\n      <td>Mass:</td>\\n      <td>6.39 × 10^23 kg (0.11 Earths)</td>\\n    </tr>\\n    <tr>\\n      <th>3</th>\\n      <td>Moons:</td>\\n      <td>2 (Phobos &amp; Deimos)</td>\\n    </tr>\\n    <tr>\\n      <th>4</th>\\n      <td>Orbit Distance:</td>\\n      <td>227,943,824 km (1.38 AU)</td>\\n    </tr>\\n    <tr>\\n      <th>5</th>\\n      <td>Orbit Period:</td>\\n      <td>687 days (1.9 years)</td>\\n    </tr>\\n    <tr>\\n      <th>6</th>\\n      <td>Surface Temperature:</td>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n    <tr>\\n      <th>7</th>\\n      <td>First Record:</td>\\n      <td>2nd millennium BC</td>\\n    </tr>\\n    <tr>\\n      <th>8</th>\\n      <td>Recorded By:</td>\\n      <td>Egyptian astronomers</td>\\n    </tr>\\n  </tbody>\\n</table>', 'hemispheres': [{'title': 'Cerberus Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/cerberus_enhanced.tif/full.jpg'}, {'title': 'Schiaparelli Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/schiaparelli_enhanced.tif/full.jpg'}, {'title': 'Syrtis Major Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/syrtis_major_enhanced.tif/full.jpg'}, {'title': 'Valles Marineris Hemisphere Enhanced', 'img_url': 'https://astropedia.astrogeology.usgs.gov/download/Mars/Viking/valles_marineris_enhanced.tif/full.jpg'}]}\n"
      ]
     }
    ],
    "source": [
-    "def scrapeMarsData(): \n",
-    "    marsDict = {}\n",
+    "def scrape_mars_data(): \n",
+    "    mars_dict = {}\n",
     "    \n",
     "    # Mars News\n",
-    "    news_tuple = scrapeNasaMarsNews()\n",
+    "    news_tuple = scrape_nasa_mars_news()\n",
     "    news_title, news_p = news_tuple\n",
-    "    marsDict['news_title'] = news_title\n",
-    "    marsDict['news_p'] = news_p\n",
+    "    mars_dict['news_title'] = news_title\n",
+    "    mars_dict['news_p'] = news_p\n",
     "    \n",
     "    # JPL\n",
-    "    marsDict['featured_image_url'] = scrapeJPLFeaturedImage()\n",
+    "    mars_dict['featured_image_url'] = scrape_jpl_featured_image()\n",
     "\n",
     "    # Mars Space Facts\n",
-    "    marsDict['space_facts_HTML'] = scrapeMarsSpaceFacts()\n",
+    "    mars_dict['space_facts_HTML'] = scrape_mars_space_facts()\n",
     "\n",
-    "    marsDict['hemispheres'] = scrapeMarsHemispheres()\n",
+    "    mars_dict['hemispheres'] = scrape_mars_hemispheres()\n",
     "    \n",
-    "    return marsDict\n",
+    "    return mars_dict\n",
     "\n",
-    "marsDict = scrapeMarsData()\n",
+    "mars_dict = scrape_mars_data()\n",
     "\n",
-    "print(marsDict)"
+    "print(mars_dict)"
    ]
   },
   {
