--- a/mission_to_mars.ipynb
+++ b/mission_to_mars.ipynb
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "30442033-5c6d-4f66-ac5a-5a9a6d9a04e6",
    "metadata": {
     "scrolled": true,
@@ -175,57 +175,41 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<table border=\"1\" class=\"dataframe\">\n",
-      "  <thead>\n",
-      "    <tr style=\"text-align: right;\">\n",
-      "      <th></th>\n",
-      "      <th>0</th>\n",
-      "      <th>1</th>\n",
-      "    </tr>\n",
-      "  </thead>\n",
+      "<table border=\"1\" class=\"dataframe table table-striped\">\n",
       "  <tbody>\n",
       "    <tr>\n",
-      "      <th>0</th>\n",
       "      <td>Equatorial Diameter:</td>\n",
       "      <td>6,792 km</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>1</th>\n",
       "      <td>Polar Diameter:</td>\n",
       "      <td>6,752 km</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>2</th>\n",
       "      <td>Mass:</td>\n",
       "      <td>6.39 × 10^23 kg (0.11 Earths)</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>3</th>\n",
       "      <td>Moons:</td>\n",
       "      <td>2 (Phobos &amp; Deimos)</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>4</th>\n",
       "      <td>Orbit Distance:</td>\n",
       "      <td>227,943,824 km (1.38 AU)</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>5</th>\n",
       "      <td>Orbit Period:</td>\n",
       "      <td>687 days (1.9 years)</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>6</th>\n",
       "      <td>Surface Temperature:</td>\n",
       "      <td>-87 to -5 °C</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>7</th>\n",
       "      <td>First Record:</td>\n",
       "      <td>2nd millennium BC</td>\n",
       "    </tr>\n",
       "    <tr>\n",
-      "      <th>8</th>\n",
       "      <td>Recorded By:</td>\n",
       "      <td>Egyptian astronomers</td>\n",
       "    </tr>\n",
@@ -243,7 +227,7 @@
     "    url = 'https://space-facts.com/mars/'\n",
     "    tables = pd.read_html(requests.get(url).text)\n",
     "    df = tables[2]\n",
-    "    return df.to_html()\n",
+    "    return df.to_html(classes='table table-striped', header=False, index=False)\n",
     "\n",
     "mars_space_facts_HTML = scrape_mars_space_facts()\n",
     "print(mars_space_facts_HTML)\n"
